--- a/config.html
+++ b/config.html
@@ -89,6 +89,10 @@
 				<label class="form-check-label" for="enable_transparent">Enable Transparent Background</label>
 				<input class="form-check-input" type="checkbox" id="enable_transparent">
 			</div>
+			<div class="form-check-reverse">
+				<label class="form-check-label" for="hide_ban_icons">Hide Ban Icons</label>
+				<input class="form-check-input" type="checkbox" id="hide_ban_icons">
+			</div>
 	
 			<a class="btn btn-primary" data-bs-toggle="collapse" href="#summonerNamesCollapse" role="button" aria-expanded="false" aria-controls="collapseExample">
 				Edit summoner names
